crates/glyim-typeck/src/tests/snapshots/glyim_typeck__tests__snapshot_errors__snapshot_assign_to_immutable.snap
---
source: crates/glyim-typeck/src/tests/snapshot_errors.rs
expression: errors
---
[
    AssignToImmutable {
        name: "x",
        expr_id: ExprId(
            0,
        ),
        span: (
            0,
            0,
        ),
    },
]
