crates/glyim-typeck/src/tests/snapshots/glyim_typeck__tests__snapshot_errors__snapshot_deref_non_pointer.snap
---
source: crates/glyim-typeck/src/tests/snapshot_errors.rs
expression: errors
---
[
    DerefNonPointer {
        found: Int,
        expr_id: ExprId(
            4,
        ),
        span: (
            32,
            33,
        ),
    },
    InvalidReturnType {
        expected: Int,
        found: Never,
    },
]
