crates/glyim-typeck/src/tests/snapshots/glyim_typeck__tests__snapshot_errors__snapshot_invalid_cast_to_str.snap
---
source: crates/glyim-typeck/src/tests/snapshot_errors.rs
expression: errors
---
[
    MismatchedTypes {
        expected: Str,
        found: Int,
        expr_id: ExprId(
            0,
        ),
        span: (
            13,
            15,
        ),
    },
]
