crates/glyim-typeck/src/tests/snapshots/glyim_typeck__tests__snapshot_errors__snapshot_missing_field_in_struct_lit.snap
---
source: crates/glyim-typeck/src/tests/snapshot_errors.rs
expression: errors
---
[
    MissingField {
        struct_name: "Point",
        field: "y",
        span: (
            41,
            55,
        ),
    },
    InvalidReturnType {
        expected: Int,
        found: Named(
            Symbol(
                0,
            ),
        ),
    },
]
