crates/glyim-typeck/src/tests/snapshots/glyim_typeck__tests__snapshot_errors__snapshot_non_exhaustive_match_user_enum.snap
---
source: crates/glyim-typeck/src/tests/snapshot_errors.rs
expression: errors
---
[
    NonExhaustiveMatch {
        missing: [
            "Green",
            "Blue",
        ],
        span: (
            51,
            87,
        ),
    },
]
