crates/glyim-typeck/src/tests/snapshots/glyim_typeck__tests__snapshot_errors__snapshot_return_type_mismatch.snap
---
source: crates/glyim-typeck/src/tests/snapshot_errors.rs
expression: errors
---
[
    InvalidReturnType {
        expected: Bool,
        found: Int,
    },
    InvalidReturnType {
        expected: Int,
        found: Bool,
    },
]
